<resources>
    <string name="app_name">To learn or not to learn</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="today_counts">Today words</string>
    <string name="stats_title">Stats</string>
    <string name="today_time_title">Study time today</string>
    <string name="all_time_title">Cumulative hours</string>
    <string name="all_counts_title">Cumulative number</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_successful">Login Successful</string>
    <string name="wrong_password">Wrong password</string>
    <string name="username_hint">Your username</string>
    <string name="password_hint">Your password</string>
    <string name="username_is_empty_textview">Username cannot be empty</string>
    <string name="password_is_empty_textview">Password cannot be empty</string>
    <string name="remember_password_hint">Remember me</string>
    <string name="re_password_hint">Type your password again</string>
    <string name="sign_up_text">Sign up</string>
    <string name="different_password">Different password</string>
    <string name="learn">Learn</string>
    <string name="review">Review</string>
    <string name="new_password_hint">New password</string>
    <string name="old_password_hint">Your current password</string>
    <string name="choose_tip_textview">Recall the meaning of the word before choosing, and look at the answer if you can\'t think of it.</string>
    <string name="show_ans_text">Show answer</string>
    <string name="password_cannot_empty">Cannot be empty</string>
    <string name="wrong_old_password_hint">Wrong password</string>
    <string name="same_password_hint">You cannot set a same password.</string>
    <string name="continue_text">Continue</string>
    <string name="how_many_days_learn">You have learned for %d day(s) in a row.</string>
    <string name="no_learn_today">You haven\'t learned today.</string>
    <string name="user_not_exist_toast">User does not exist</string>
    <string name="cannot_empty">Username and password cannot be empty</string>
    <string name="search_empty">Search input empty</string>
    <string name="no_exist_word">%s isn\'t a available word</string>
    <string name="fail_to_search">Check your internet and try again.</string>
    <string name="words_amount">%d</string>
    <string name="time_amount">%d</string>
    <string name="show_all_learned_words">See all you learned words</string>
    <string name="unshow_all_learned_words">Close</string>
    <string name="search_word_at_here">Search...</string>
    <string name="quit_text">Quit</string>
    <string name="change_password_text">Change your password</string>
    <string name="background_option">Set learning background</string>
    <string name="study_progress">%d/%d</string>
    <string name="no_word_can_review_toast">There\'s no more words to review.</string>
    <string name="en_mean_text">English meaning</string>
    <string name="no_study_today">You haven\'t studied today.</string>
    <string name="show_hint">Hint</string>
    <string name="en_us_show">English(United States)(current)</string>
    <string name="zh_cn_show">简体中文（中国）</string>
    <string name="zh_me_show">梗体中文（天朝）</string>
    <string name="choose_language_text">Language</string>
    <string name="yes">Yes</string>
    <string name="not_now">Not right now</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="switch_language_title">Sure?</string>
    <string name="switch_language_message">Want to switch the language to %s? Switching the language will cause the app to restart</string>
    <string name="same_language_hint">Your application language is %s already</string>
    <string name="en_us">English</string>
    <string name="zh">简体中文（中国）</string>
    <string name="zh_me">梗体中文（天朝）</string>
    <string name="study">Learning</string>
    <string name="stats">Stats</string>
    <string name="options">Options</string>
    <string name="same_password_toast">Same password</string>
    <string name="wrong_pass_word_toast">Wrong password</string>
    <string name="modified_successfully">Modified successfully</string>
    <string name="everyday_learned_text">The last week you learnded</string>
    <string name="words_text">words</string>
    <string name="time_text">mins</string>
    <string name="finish_learning_text">You completed a round of word study</string>
    <string name="finish_review_text">You completed a round of word study</string>
    <string name="stop_study_text">Have a break</string>
    <string name="continue_study_text">Continue learning</string>
    <string name="finish_counts">%d words completed</string>
    <string name="remember_text">Remember</string>
    <string name="confused_text">Confused</string>
    <string name="no_remember_text">No remember</string>
    <string name="login_text">Login</string>
    <string name="set_background">Set background</string>
    <string name="reset_background">Reset background</string>
    <string name="all_learned_words_text">All learned words</string>
    <string name="apply_numbers">Apply</string>
    <string name="empty_number">Numbers cannot be empty</string>
    <string name="illegal_number">Cannot less than 5</string>
    <string name="max_number_each_learning">Max number each learning</string>
    <string name="max_number_each_review">Max number each review</string>
    <string name="apply_successful">Successful</string>
    <string name="study_settings">Study settings</string>
    <string name="daily_study_minutes_text">Daily study minutes</string>
    <string name="login">Login</string>
    <string name="only_zh_hint">Choose 「Remember」if you instantly recall the meaning of the word\nIf the meaning of the word comes to mind after thinking, choose 「Confused」</string>
    <string name="only_en_hint">Last time for this word😙, please judge without prompts</string>
    <string name="close_toast">Press again to exit</string>
    <string name="close_page_title">Sure?</string>
    <string name="close_page_message">Exiting at this point will result in the loss of the current learning progress.</string>
    <string name="close_page_yes">I know what I\'m doing!</string>
    <string name="close_page_no">Oh, I hit it by mistake</string>
    <string name="no_word_can_learn_toast">There\'s no more words to learn.</string>
    <string name="fail_to_download_audio">Fail to play audio, it might cause by no Internet connection</string>
    <string name="about_text">About</string>
    <string name="change_password">Change password</string>
    <string name="version_text">Version: No version</string>
    <string name="fun"></string>
    <string name="update">Check latest version</string>
    <string name="no_update">No update</string>
    <string name="about_info">By YiYue</string>
    <string name="fun2"></string>
    <string name="no_learned_any_word_text">You haven\'t learned any word</string>
    <string name="no_learn_today_notice_title">You haven\'t studied yet today.</string>
    <string name="no_learn_today_notice_message">Click to start Learning</string>
    <string name="set_alpha">Background transparency: %d%%</string>
</resources>