<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/informationLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/todayCounts"
            app:layout_constraintTop_toBottomOf="@+id/todayCounts" />

        <TextView
            android:id="@+id/statsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/stats_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/todayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/today_time_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/todayCounts"
            app:layout_constraintTop_toBottomOf="@+id/todayCounts" />

        <TextView
            android:id="@+id/allTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_time_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/allCounts"
            app:layout_constraintTop_toTopOf="@+id/todayTime" />

        <TextView
            android:id="@+id/todayCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="64dp"
            android:text="@string/today_counts"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/allCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="244dp"
            android:text="@string/all_counts_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/todayCounts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/todayCounts"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>