<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPassword">

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/oldPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="00dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--    <Button-->
<!--        android:id="@+id/back2"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:background="@drawable/back"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/oldPasswordEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_cannot_empty"
        android:textColor="#EB3324"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <TextView
        android:id="@+id/newPasswordEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_cannot_empty"
        android:textColor="#EB3324"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <TextView
        android:id="@+id/samePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/same_password_hint"
        android:textColor="#EB3324"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <TextView
        android:id="@+id/wrongPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_old_password_hint"
        android:textColor="#EB3324"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>